--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - run: npm install -g terser
+      - run: npm install -g csso-cli
+      - run: npm install -g html-minifier
+      - run: for i in ./*.js; do terser $i --compress -o $i; done
+      - run: for i in ./*.css; do csso $i -o $i; done
+      #- run: for i in ./*.html; do html-minifier [--your-options-here] $i -o $i; done
+      
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
