--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\.html//g' {} \;
           find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\.\//https:\/\/youyin.madladsquad.com\//g' {} \;
+          find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\/index//g' {} \;
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
