--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,9 +41,9 @@ jobs:
       #- run: for i in ./*.html; do html-minifier [--your-options-here] $i -o $i; done
       - name: Change URLs to production mode
         run: |
+          find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\/index\.html//g' {} \;
           find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\.html//g' {} \;
           find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\.\//https:\/\/youyin.madladsquad.com\//g' {} \;
-          find ./ -type f \( -iname \*.html -o -iname \*.js \) -exec sed -i 's/\/index//g' {} \;
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
