--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,6 +32,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
