--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      # Disable automatic localhost
+      - run: echo "run-localhost-automatically: false" >> uvproj.yaml 
       - name: Build project
         run: cd UVKBuildTool/ && ./setup-web.sh .. && cd build && ./UVKBuildTool --build ../../build ../../ && cd ../../
       - run: rm *.html
