--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,8 +44,7 @@ jobs:
       - run: "echo 'run-localhost-automatically: false' >> uvproj.yaml"
       - name: Build project
         run: cd UVKBuildTool/ && ./setup-web.sh .. && cd build && ./UVKBuildTool --build ../../build ../../ && cd ../../
-      - run: rm *.html
-      - run: mv build/*.html .
+      - run: ./ci-clean.sh
       - run: npm install -g terser
       - run: npm install -g csso-cli
       - run: npm install -g html-minifier
