--- a/uvproj.yaml
+++ b/uvproj.yaml
@@ -1,5 +1,5 @@
 localhost-commands:
-  - python3 -m http.server
+  - python3 -m http.server 8080
 allowed-extensions:
   - html
 filename-blacklist:
