Fixed some issues and added animations

--- a/uvproj.yaml
+++ b/uvproj.yaml
@@ -1,5 +1,6 @@
 localhost-commands:
-  - python3 -m http.server 8080
+  - "find ./ -type f \\( -iname \\*.html -o -iname \\*.js \\) -exec sed -i 's/\\.\\//http:\\/\\/0.0.0.0:8080\\//g' {} \\;"
+  - "python3 -m http.server 8080"
 allowed-extensions:
   - html
   - js
