--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,18 @@ jobs:
         run: |
           git submodule sync --recursive
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - name: Get tag
+        shell: bash
+        id: tag
+        run: |
+          tag="${{ github.ref_name }}"
+          tag="${tag:1}"
+          echo "out=youyin-web-${tag}" >> $GITHUB_OUTPUT
       - name: Create archive
         shell: bash
         run: |
           rm -rf .git/
-          tar cfJ youyin-web.tar.xz . || echo "Might have failed"
+          tar cfJ ${{ steps.tag.outputs.out }}.tar.xz . --transform "s,^,${{ steps.tag.outputs.tag }}/," * || echo "Might have failed"
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
@@ -32,5 +39,5 @@ jobs:
             More on what is done this month can be found on the latest newsletter entry: https://madladsquad.com/#monthly-newsletter
           draft: false
           prerelease: false
-          files: youyin-web.tar.xz
+          files: ${{ steps.tag.outputs.out }}.tar.xz
           generate_release_notes: false
