--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,16 +21,19 @@ jobs:
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
       - name: Get tag
         shell: bash
-        id: tag
+        id: mod
         run: |
           tag="${{ github.ref_name }}"
-          tag="${tag:1}"
-          echo "out=youyin-web-${tag}" >> $GITHUB_OUTPUT
+          echo "out=youyin-web-${tag:1}" >> $GITHUB_OUTPUT
       - name: Create archive
         shell: bash
         run: |
           rm -rf .git/
-          tar cfJ ${{ steps.tag.outputs.out }}.tar.xz . --transform "s,^,${{ steps.tag.outputs.tag }}/," * || echo "Might have failed"
+          mkdir "${{ steps.mod.outputs.out }}" || exit
+          mv * ${{ steps.mod.outputs.out }}/ || echo "Errors in move"
+          mv .* "${{ steps.mod.outputs.out }}" || echo "Errors in move"
+
+          tar cfJ ${{ steps.mod.outputs.out }}.tar.xz ${{ steps.mod.outputs.out }} || echo "Might have failed"
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
@@ -39,5 +42,5 @@ jobs:
             More on what is done this month can be found on the latest newsletter entry: https://madladsquad.com/#monthly-newsletter
           draft: false
           prerelease: false
-          files: ${{ steps.tag.outputs.out }}.tar.xz
+          files: ${{ steps.mod.outputs.out }}.tar.xz
           generate_release_notes: false
