--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -40,6 +40,7 @@ jobs:
           git config --global user.email "contact@madladsquad.com"
           git fetch --all
           git checkout auto || git checkout -b auto
+          git submodule foreach --recursive "git reset --hard origin/\`git symbolic-ref refs/remotes/origin/HEAD | cut -f4 -d/\`"
           o=$(git submodule update --remote --merge)
           echo "out=${o:0:1}?" >> $GITHUB_OUTPUT
       - name: Commit
